Fix #1505 This commit should fix the issue with "Rockfield: long username overlaps comments"
This is a CSS implementation but most of browsers today don't support hyphens quite well. So, it defaults to word breaking.

--- a/rockfield/sass/_extra-child-theme.scss
+++ b/rockfield/sass/_extra-child-theme.scss
@@ -449,6 +449,14 @@ table,
 	}
 }
 
+.comment-author {
+	.fn {
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+		hyphens: auto;
+	}
+}
+
 @include media(tablet) {
 	.comment-meta {
 		border-right: 1px solid #{map-deep-get($config-global, "color", "border", "default")};
