--- a/rockfield/style-rtl.css
+++ b/rockfield/style-rtl.css
@@ -2946,19 +2946,19 @@ table th,
 	margin-bottom: 32px;
 }
 
-.children {
+.comment-list .children {
 	list-style: none;
 	padding-right: 16px;
 }
 
-.children > li {
+.comment-list .children > li {
 	border-top: 1px solid #E0E0E0;
 	margin-top: 32px;
 	margin-bottom: 32px;
 }
 
 @media only screen and (min-width: 560px) {
-	.children {
+	.comment-list .children {
 		padding-right: 32px;
 	}
 }
@@ -3990,6 +3990,15 @@ table th,
 .comment-respond .form-submit {
 	display: flex;
 	justify-content: center;
+}
+
+.comment-author .fn {
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	-webkit-hyphens: auto;
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	hyphens: auto;
 }
 
 @media only screen and (min-width: 640px) {
