--- a/rockfield/style.css
+++ b/rockfield/style.css
@@ -2963,19 +2963,19 @@ table th,
 	margin-bottom: 32px;
 }
 
-.children {
+.comment-list .children {
 	list-style: none;
 	padding-left: 16px;
 }
 
-.children > li {
+.comment-list .children > li {
 	border-top: 1px solid #E0E0E0;
 	margin-top: 32px;
 	margin-bottom: 32px;
 }
 
 @media only screen and (min-width: 560px) {
-	.children {
+	.comment-list .children {
 		padding-left: 32px;
 	}
 }
@@ -4019,6 +4019,12 @@ table th,
 .comment-respond .form-submit {
 	display: flex;
 	justify-content: center;
+}
+
+.comment-author .fn {
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	hyphens: auto;
 }
 
 @media only screen and (min-width: 640px) {
